adds categorize to the table

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="number" id="person1Income" value="3000" required>
 
     <label for="person2Income">Person 2 Income:</label>
-    <input type="number" id="person2Income" value="2500" required>
+    <input type="number" id="person2Income" value="2300" required>
 
     <button type="button" onclick="calculate()">Calculate</button>
 </form>
@@ -26,6 +26,7 @@
         <th>Person 1 Amount</th>
         <th>Person 2 Amount</th>
     </tr>
+    <tr><td><strong>House shared expense</strong></td></tr>
     <tr>
       <td>Rent</td>
       <td><input type="number" class="expenseInput" value="1595"></td>
@@ -47,16 +48,23 @@
     <td><input type="number" class="expenseInput" value="0"></td>
 </tr>
 <tr>
-  <td>Gas (~110)</td>
-  <td><input type="number" class="expenseInput" value="116.92"></td>
+  <td>Groceries (min 300) </td>
+  <td><input type="number" class="expenseInput" value="400"></td>
   <td><input type="number" class="expenseInput" value="0"></td>
 </tr>
-
+<tr>
 <tr>
   <td>Internet(~30) </td>
   <td><input type="number" class="expenseInput" value="0"></td>
   <td><input type="number" class="expenseInput" value="30"></td>
 </tr>
+<tr>
+  <td>Gas (~110)</td>
+  <td><input type="number" class="expenseInput" value="116.92"></td>
+  <td><input type="number" class="expenseInput" value="0"></td>
+</tr>
+<tr><td><strong>Individual expense</strong></td></tr>
+
 <tr>
   <td>Student loans person #1 </td>
   <td><input type="number" class="expenseInput" value="138"></td>
@@ -67,12 +75,7 @@
   <td><input type="number" class="expenseInput" value="0"></td>
   <td><input type="number" class="expenseInput" value="300"></td>
 </tr>
-<tr>
-  <td>Groceries (min 300) </td>
-  <td><input type="number" class="expenseInput" value="400"></td>
-  <td><input type="number" class="expenseInput" value="0"></td>
-</tr>
-<tr>
+
   <td>Gas </td>
   <td><input type="number" class="expenseInput" value="75"></td>
   <td><input type="number" class="expenseInput" value="250"></td>
