--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 <script src="app.js"></script>
 <script src="button.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
 
