--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 <br>
 <br>
 <p class="centered-text">Summary
-  🏠 This page outlines shared and individual expenses for two people living together, covering house-related costs and individual financial responsibilities.</p>
+  🏠 This app can help with calculating expenses for individuals or more, covering house-related costs and individual financial expenses</p>
 
 <footer>
-  <p>&copy; 2023 Qilin Xie. All rights reserved.</p>
+  <p>&copy; 2024 Qilin Xie. All rights reserved.</p>
 </footer>
 
 <script src="app.js"></script>
